_generated-doc/2.2/config/quarkus-resteasy-resteasy-server-common-processor-resteasy-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_configuration]]link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.singleton-resources]]`link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.singleton-resources[quarkus.resteasy.singleton-resources]`

[.description]
--
If this is true then JAX-RS will use only a single instance of a resource class to service all requests. 
 If this is false then it will create a new instance of the resource per request. 
 If the resource class has an explicit CDI scope annotation then the value of this annotation will always be used to control the lifecycle of the resource class. 
 IMPLEMENTATION NOTE: `javax.ws.rs.Path` turns into a CDI stereotype with singleton scope. As a result, if a user annotates a JAX-RS resource with a stereotype which has a different default scope the deployment fails with IllegalStateException.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.path]]`link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.path[quarkus.resteasy.path]`

[.description]
--
Set this to override the default path for JAX-RS resources if there are no annotated application classes.
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.ignore-application-classes]]`link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.ignore-application-classes[quarkus.resteasy.ignore-application-classes]`

[.description]
--
Ignore all explicit JAX-RS `Application` classes. As multiple JAX-RS applications are not supported, this can be used to effectively merge all JAX-RS applications.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.build-time-condition-aware]]`link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.build-time-condition-aware[quarkus.resteasy.build-time-condition-aware]`

[.description]
--
Whether or not annotations such `@IfBuildTimeProfile`, `@IfBuildTimeProperty` and friends will be taken into account when used on JAX-RS classes.
--|boolean 
|`true`

|===