_generated-doc/2.13/config/quarkus-resteasy-resteasy-server-common-processor-resteasy-config.adoc

:summaryTableId: quarkus-resteasy-resteasy-server-common-processor-resteasy-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_configuration]]link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.singleton-resources]]`link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.singleton-resources[quarkus.resteasy.singleton-resources]`

[.description]
--
If this is true then JAX-RS will use only a single instance of a resource class to service all requests. 
If this is false then it will create a new instance of the resource per request. 
If the resource class has an explicit CDI scope annotation then the value of this annotation will always be used to control the lifecycle of the resource class. 
IMPLEMENTATION NOTE: `javax.ws.rs.Path` turns into a CDI stereotype with singleton scope. As a result, if a user annotates a JAX-RS resource with a stereotype which has a different default scope the deployment fails with IllegalStateException.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_RESTEASY_SINGLETON_RESOURCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_RESTEASY_SINGLETON_RESOURCES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.path]]`link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.path[quarkus.resteasy.path]`

[.description]
--
Set this to override the default path for JAX-RS resources if there are no annotated application classes. This path is specified with a leading `/`, but is resolved relative to `quarkus.http.root-path`.  
 - If `quarkus.http.root-path=/` and `quarkus.resteasy.path=/bar`, the JAX-RS resource path will be `/bar` 
 - If `quarkus.http.root-path=/foo` and `quarkus.resteasy.path=/bar`, the JAX-RS resource path will be `/foo/bar`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_RESTEASY_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_RESTEASY_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|`/`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.ignore-application-classes]]`link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.ignore-application-classes[quarkus.resteasy.ignore-application-classes]`

[.description]
--
Ignore all explicit JAX-RS `Application` classes. As multiple JAX-RS applications are not supported, this can be used to effectively merge all JAX-RS applications.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_RESTEASY_IGNORE_APPLICATION_CLASSES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_RESTEASY_IGNORE_APPLICATION_CLASSES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.build-time-condition-aware]]`link:#quarkus-resteasy-resteasy-server-common-processor-resteasy-config_quarkus.resteasy.build-time-condition-aware[quarkus.resteasy.build-time-condition-aware]`

[.description]
--
Whether annotations such `@IfBuildTimeProfile`, `@IfBuildTimeProperty` and friends will be taken into account when used on JAX-RS classes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_RESTEASY_BUILD_TIME_CONDITION_AWARE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_RESTEASY_BUILD_TIME_CONDITION_AWARE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===